                                     Xbox Media Center CHANGELOG
************************************************************************************************************* 
*************************************************************************************************************

added/fixed: (dd-mm-yyyy) (please specify date in CET)
 - 15-03-2006 fixed: forgot to commit new nosefart dll a long time ago :)
 - 15-03-2006 added: Window.IsVisible bool condition.
 - 15-03-2006 fixed: Codec info could show on slideshow screensaver if it was last shown in fullscreen vis or video.
 - 15-03-2006 added: new info labels related to music party mode:
    		musicpartymode.enabled - visibilty condition, true is party mode is active
		musicpartymode.songsplayed - number of songs played
		musicpartymode.matchingsongs - number of matching songs
		musicpartymode.matchingsongspicked - number of matching songs picked already
		musicpartymode.matchingsongsleft - number of unpicked matching songs
		musicpartymode.relaxedsongspicked - number of unique songs picked with relaxed restrictions (to be used later)
		musicpartymode.randomsongspicked - number of unique randomly picked songs
 - 15-03-2006 changed: music party mode song history is now a function of the number of matching songs.
			if there's less than 50 matching songs, there is no history.
			otherwise the history is 1/2 the number of matching songs, up to 200 songs.
 - 14-03-2006 added: more exception handling in dvdplayer and generic exception handling in most threads, onexit will be called on an exception in process
 - 14-03-2006 fixed: some chapters from ogg files may not play
 - 14-03-2006 fixed: mt-daapd 0.2.4 now supported
 - 14-03-2006 fixed: daap now uses mPlayer for playback (faster start time)
 - 14-03-2006 fixed: [ 1448284 ] No hidden pass when unlock
 - 14-03-2006 added: You can activate specific parts of the Kai window using ActivateWindow(XLinkKai,part) where part is Chat,Games,Buddies or Arenas.